Strava API to read rides and update data
